welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:8: error: ';' expected but 'else' found.
  } else {
    ^posNeg:12: error: Unmatched closing brace '}' ignored here
 }
 ^